...
    );
  }

  @override
  Widget build(BuildContext context) {
    final deleteItemCategoryButton = InkWell(
        key: Key('delete_category_button'),
        child: Container(
          child: const Icon(
            Icons.delete,
            size: 25.0,
          ),
        ),
...
                  "-1");
            }
          });
        });

    final editItemCategoryButton = InkWell(
        key: Key('edit_category_button'),
        child: Container(
          child: const Icon(
            Icons.edit,
            size: 25.0,
          ),
        ),
...
